--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         Track your score instantly and improve with every attempt!
     </h5>
     <h4 style="padding:20px 50px;">🚀 Why Take Our Quiz?</h4>
-    <h5 class="reason">
+    <h5 class="reason" style="padding-top:20px">
      ✔ 10 Questions per quiz  <br>
      ✔ Instant Score  <br>
      ✔ Beginner Friendly  <br>
@@ -83,4 +83,5 @@
     </footer>
 
 </body>
+
 </html>
