--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         Track your score instantly and improve with every attempt!
     </h5>
     <h4 style="padding:20px 50px;">🚀 Why Take Our Quiz?</h4>
-    <h5 class="reason" style="padding-left:50px;">
+    <h5 class="reason">
      ✔ 10 Questions per quiz  <br>
      ✔ Instant Score  <br>
      ✔ Beginner Friendly  <br>
@@ -85,4 +85,5 @@
 </body>
 
 </html>
+
 
