--- a/bootstrap.html
+++ b/bootstrap.html
@@ -6,10 +6,11 @@
     </head>
 
     <body id="testbody">
-
+        <div class="timer">
+            <h2 id="timer">Time Left: <span id="time">60</span> Seconds</h2>
+        </div>
         <h1 id="heading">🎯 SMARTQUIZ – INTERACTIVE MCQ SYSTEM</h1>
         <h1 id="title"> Bootstrap Quiz</h1>
-        <h2 id="timer">Time Left: <span id="time">60</span> Seconds</h2>
         <h3 class="t"> Questions : </h3>
         <div class="qn">
             <p> </p>
@@ -99,4 +100,5 @@
 
          <script src="script.js"></script>
     </body>
+
 </html>
