--- a/bootstrap.html
+++ b/bootstrap.html
@@ -3,6 +3,7 @@
     <head>
         <title> Bootstrap Quizz </title>
         <link rel="stylesheet" href="style.css">
+         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body id="testbody">
@@ -102,3 +103,4 @@
     </body>
 
 </html>
+
