--- a/htmlres.html
+++ b/htmlres.html
@@ -3,6 +3,7 @@
 <head>
     <title>Quiz Result</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" rel="stylesheet" />
 </head>
 <body id="resultbody">
@@ -36,3 +37,4 @@
     </script>
 </body>
 </html>
+
