--- a/javascript.html
+++ b/javascript.html
@@ -3,14 +3,15 @@
     <head>
         <title> JavaScript Quizz </title>
         <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body id="body">
-        
+        <div class="timer">
+            <h2 id="timer">Time Left: <span id="time">60</span> Seconds</h2>
+        </div>
         <h1 id="heading">🎯 SMARTQUIZ – INTERACTIVE MCQ SYSTEM</h1>
         <h1 id="title"> JavaScript Quiz</h1>
-        <div id="timer" style="color:green; font-size: 20px; font-weight:bold; margin-left:1200px;">
-            Time Left: <span id="time">60</span> Seconds
-        </div>
+        
         <h3 class="t"> Questions : </h3>
         <div class="qn">
             <p> </p>
