--- a/CSS.html
+++ b/CSS.html
@@ -7,7 +7,7 @@
     </head>
     <body id="body">
         <div class="timer">
-            <h2 id="timer">Time Left: <span id="time">60</span> Seconds</h2>
+            <h2 id="timer">⏳ Time Left: <span id="time">60</span> Seconds</h2>
         </div>
         <br> <br> <br>
         <h1 id="heading">🎯 SMARTQUIZ – INTERACTIVE MCQ SYSTEM</h1>
@@ -103,4 +103,5 @@
          <script src="script.js"></script>
     </body>
 </html>
+
 
