--- a/bootstrap.html
+++ b/bootstrap.html
@@ -8,7 +8,7 @@
 
     <body id="testbody">
         <div class="timer">
-            <h2 id="timer">Time Left: <span id="time">60</span> Seconds</h2>
+            <h2 id="timer">⏳ Time Left: <span id="time">60</span> Seconds</h2>
         </div>
         <br> <br> <br>
         <h1 id="heading">🎯 SMARTQUIZ – INTERACTIVE MCQ SYSTEM</h1>
@@ -104,5 +104,6 @@
     </body>
 
 </html>
+
 
 
